--- a/app.html
+++ b/app.html
@@ -12,6 +12,7 @@
     <!--Header of the Page Starts here-->
     <div class="navbar navbar-inverse">
         <a class="navbar-brand" href="#">SPORTS STORE</a>
+        <cart-summary></cart-summary>
     </div>
     <!--Header of the Page Ends here-->
 
@@ -23,37 +24,8 @@
     <!--Alert Div Ends here-->
 
     <!--Panel to show product list and category list starts here-->
-    <div class="panel panel-default row" ng-controller="productListCtrl" ng-hide="data.error">
-
-        <!--Div to display the caategory list starts here-->
-        <div class="col-xs-3">
-            <a ng-click="selectCategory()"  class="btn btn-block btn-default btn-lg">Home</a>
-            <a ng-repeat="item in data.products |  orderBy:'category' | unique : 'category'" ng-click="selectCategory(item)" ng-class="getCategoryClass(item)" class="btn btn-block btn-default btn-lg">
-                {{item}}
-            </a>
-        </div>
-        <!--Div to display the caategory list ends here-->
-
-        <!--Div to display product list starts here-->
-        <div class="col-xs-8">
-            <div class="well" ng-repeat="item in data.products | filter : categoryFilterFn | range: selectedPage:pageSize ">
-                <h3>
-                    <strong>{{item.name}}</strong>
-                    <span class="pull-right label label-primary" >{{item.price | currency}}</span>
-                </h3>
-                <span class="lead">{{item.description}}</span>
-            </div>
-            <div class="pull-right btn-group">
-                <a ng-repeat="page in data.products | filter : categoryFilterFn |pageCount: pageSize"
-                   ng-click="selectPage($index + 1)" class="btn btn-default"
-                   ng-class="getPageClass($index+1)">
-                    {{$index + 1}}
-                </a>
-            </div>
-        </div>
-        <!--Div to display product list ends here-->
-
-    </div>
+    <!--<ng-include src="'angularjs/views/productList.html'"></ng-include>-->
+    <ng-view></ng-view>
     <!--Panel to show product list and category list ends here-->
 
     <!--Rendering of scripts-->
@@ -62,5 +34,11 @@
     <script src="angularjs/controllers/sportsStoreController.js"></script>
     <script src="angularjs/filters/customFilter.js"></script>
     <script src="angularjs/controllers/productListController.js"></script>
+    <script src="angularjs/components/cart/cart.js"></script>
+    <script src="angularjs/ngmodules/angular-route.js"></script>
+    <script src="angularjs/controllers/checkoutController.js"></script>
+
+
+
 </body>
 </html>
